[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = pyrocs
python_requires = >=3.7, <3.10
version = attr: pyrocs.__version__

[options]
package_dir=
    =.
packages=find_namespace:
include_package_data = True
install_requires = 
  pytest
  scipy
  numpy
  pandas
  matplotlib
  networkx
  seaborn

[options.package_data]
* = VERSION

[project.optional-dependencies]
test = ["pytest >=6.0", "pytest-cov"]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "nbsphinx",
  "nbsphinx-link",
  "sphinxcontrib-bibtex"
  ]
